--- a/general.html
+++ b/general.html
@@ -106,7 +106,7 @@
             <p>3. One of my favorite poems is Still I Rise by Maya Angelou. </p>
             <h3> Hobbies</h3>
             <p> I enjoy reading, writing, running, swimming, drawing, and working out. Generally speaking, I enjoy my alone time and my own company while doing any of these hobbies. I really enjoy all of these things, but I want to keep finding more hobbies because I really like developing new skills.</p>
-                <img width="400" img src="lake.JPG">
+                <img width="400" src="lake.JPG">
         </div>
          <div class="div2">
             <h3>Skills To Offer In the Workplace </h3>
